--- a/MERENGUE2/WEB.TEAM.MERENGUE/Code1.html
+++ b/MERENGUE2/WEB.TEAM.MERENGUE/Code1.html
@@ -97,6 +97,35 @@
         </div>
     </section>
 
+    
+ <!-- Sección FRC -->
+    <section id="frc" class="frc-info">
+        <div class="container">
+            <h2>¿Qué es FRC?</h2>
+            <p>FRC (First Robotics Competition) es una competencia mundial de robótica en la que equipos de estudiantes diseñan, construyen y programan robots para realizar tareas en un juego competitivo. Cada año, FIRST (For Inspiration and Recognition of Science and Technology)
+                presenta un desafío nuevo y emocionante, y los equipos de todo el mundo trabajan incansablemente para crear robots que puedan superar los obstáculos del desafío.</p>
+            <p>Este evento no solo pone a prueba las habilidades técnicas de los estudiantes, 
+                sino también su capacidad para trabajar en equipo, resolver problemas y hacer frente a desafíos en un entorno competitivo y emocionante.</p>
+            <p>En Team Merengue, estamos orgullosos de formar parte de FRC 2025.
+                Este es solo el inicio de un viaje lleno de oportunidades, aprendizaje y crecimiento. 
+                ¡Estamos listos para competir con otros equipos de todo el mundo y dar lo mejor de nosotros!</p>
+
+            <!-- Imágenes de FRC y FIRST -->
+            <div class="frc-images">
+                <div class="image-container">
+                    <h3>FRC</h3>
+                    <img src="Imagenes/frc-logo.png" alt="Logo de FRC">
+                </div>
+                <div class="image-container">
+                    <h3>FIRST Robotics</h3>
+                    <img src="Imagenes/first-logo.png" alt="Logo de FIRST Robotics">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    
+ <!-- Sección Carrusel -->
     <div class="contenedorCarusel">
         <div class="wave-container">
             <h1 class="wave-text">
